--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "template-server"
+name = "mono-server"
 version = "0.1.0"
 edition = "2024"
 
@@ -12,8 +12,8 @@ serde.workspace = true
 kurrentdb.workspace = true
 uuid.workspace = true
 thiserror.workspace = true
-template-shared = { path = "../shared", features = ["server"] }
-template-state = { path = "../state" }
+mono-shared = { path = "../shared", features = ["server"] }
+mono-state = { path = "../state" }
 redis= {  workspace = true }
 rocket = { workspace=true, features = ["json"] }
 rocket_cors = "0.6"
