--- a/state/Cargo.toml
+++ b/state/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "template-state"
+name = "mono-state"
 version = "0.1.0"
 edition = "2024"
 
@@ -8,7 +8,7 @@ edition = "2024"
 [dependencies]
 horfimbor-eventsource.workspace = true
 serde.workspace = true
-template-shared = { path = "../shared", features = ["server"] }
+mono-shared = { path = "../shared", features = ["server"] }
 
 
 
@@ -18,7 +18,7 @@ cucumber = { version = "0.21.1" }
 anyhow.workspace = true
 
 [[test]]
-name = "template-state-test" # this should be the same as the filename of your test target
+name = "mono-state-test" # this should be the same as the filename of your test target
 harness = false  # allows Cucumber to print output instead of libtest
 
 
