--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,6 @@ jobs:
           toolchain: beta
           components: clippy
       - name: Run tests with cucumber
-        run: cargo test -p template-state --test template-state-test
+        run: cargo test -p mono-state --test mono-state-test
       - name: Run clippy
         run: cargo clippy -- -D clippy::expect_used -D clippy::panic  -D clippy::unwrap_used
