--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,15 @@
 APP_PORT=8000
 APP_HOST=http://mono.localhost:8000
 
+# external auth host
+AUTH_HOST=http://auth.localhost:7999
+# internal auth host
+AUTH_CALLBACK_HOST=http://127.0.0.1:7999
+APP_ID="copy from newly created app in hfb-auth"
+APP_KEY="copy from newly created app in hfb-auth"
+JWT_SECRET_KEY="copy from hfb-auth JWT_SECRET_KEY"
+
 EVENTSTORE_URI=esdb://admin:changeit@localhost:2113?tls=false&tlsVerifyCert=false
 REDIS_URI=redis://localhost:6379/
+
+WASM_TAG=v0-1-0
