--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ members = [
 
 [workspace.dependencies]
 #horfimbor-eventsource = {path = "../horfimbor-engine/horfimbor-eventsource"}
+#horfimbor-jwt = { path = "../horfimbor-engine/horfimbor-jwt" }
 horfimbor-eventsource = "0.3.5"
+horfimbor-jwt = "0.1.2"
 anyhow = "1.0"
 clap = { version = "4.4", features = ["derive"] }
 redis= { version = "0.32.0", features = ["tokio-rustls-comp"] }
