--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 
 [dependencies]
 horfimbor-eventsource.workspace = true
+horfimbor-jwt.workspace = true
 clap.workspace = true
 serde.workspace = true
 kurrentdb.workspace = true
@@ -15,6 +16,7 @@ thiserror.workspace = true
 mono-shared = { path = "../shared", features = ["server"] }
 mono-state = { path = "../state" }
 redis= {  workspace = true }
+reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "charset", "http2"], default-features = false }
 rocket = { workspace=true, features = ["json"] }
 rocket_cors = "0.6"
 serde_json.workspace = true
