--- a/state/account/Cargo.toml
+++ b/state/account/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mono-state"
+name = "account-state"
 version = "0.1.0"
 edition = "2024"
 
@@ -8,18 +8,13 @@ edition = "2024"
 [dependencies]
 horfimbor-eventsource.workspace = true
 serde.workspace = true
-mono-shared = { path = "../shared", features = ["server"] }
-
-
+account-shared = { path = "../../shared/account", features = ["server"] }
+common = {path = "../../common", features = ["server"]}
 
 [dev-dependencies]
 tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros"] }
 cucumber = { version = "0.21.1" }
 anyhow.workspace = true
-
-[[test]]
-name = "mono-state-test" # this should be the same as the filename of your test target
-harness = false  # allows Cucumber to print output instead of libtest
 
 
 [lints]
