--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -13,7 +13,7 @@ horfimbor-client-derive = "0.1"
 bounce = "0.9"
 yew = { version= "0.21", features=["csr"] }
 custom-elements = "0.2"
-mono-shared = { path = "../shared" }
+account-shared = { path = "../shared/account" }
 gloo-net = "0.6"
 reqwasm = "0.5"
 weblog = "0.3"
