--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,13 +8,15 @@ edition = "2024"
 [dependencies]
 horfimbor-eventsource.workspace = true
 horfimbor-jwt.workspace = true
+public-account-event.workspace = true
 clap.workspace = true
 serde.workspace = true
 kurrentdb.workspace = true
 uuid.workspace = true
 thiserror.workspace = true
-mono-shared = { path = "../shared", features = ["server"] }
-mono-state = { path = "../state" }
+account-shared = { path = "../shared/account", features = ["server"] }
+account-state = { path = "../state/account" }
+common = {path = "../common"}
 redis= {  workspace = true }
 reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "charset", "http2"], default-features = false }
 rocket = { workspace=true, features = ["json"] }
