create planet is working, not adding it back to account

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ members = [
     "client",
     "common",
     "server",
-    "shared/account",
-    "state/account"
+    "shared/*",
+    "state/*"
 ]
 
 [workspace.dependencies]
