--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
 resolver = "2"
 members = [
-    "client",
-    "common",
-    "server",
+    "client/*",
+    "public",
+    "server/*",
     "shared/*",
     "state/*"
 ]
