--- a/client/planet/Cargo.toml
+++ b/client/planet/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mono-client"
+name = "mono-planet-client"
 version = "0.1.0"
 edition = "2024"
 
@@ -13,8 +13,7 @@ horfimbor-client-derive = "0.1"
 bounce = "0.9"
 yew = { version= "0.21", features=["csr"] }
 custom-elements = "0.2"
-account-shared = { path = "../shared/account" }
-planet-shared = { path = "../shared/planet" }
+planet-shared = { path = "../../shared/planet" }
 gloo-net = "0.6"
 reqwasm = "0.5"
 weblog = "0.3"
