fix docker build

--- a/.env.docker
+++ b/.env.docker
@@ -1,3 +1,4 @@
 
 EVENTSTORE_URI=esdb://admin:changeit@eventstore:2113?tls=false&tlsVerifyCert=false
 REDIS_URI=redis://redis:6379/
+AUTH_CALLBACK_HOST=http://auth:7999
