--- a/client/civilisation/Cargo.toml
+++ b/client/civilisation/Cargo.toml
@@ -21,6 +21,10 @@ wasm-bindgen = "0.2"
 serde.workspace = true
 serde_json.workspace = true
 futures = "0.3.28"
+rand = "0.9.2"
+url = "2.5.4"
+# getrandom is used even by rand in wasm so it's marked as unused
+getrandom = { version = "0.3", features = ["wasm_js"] }
 
 [dependencies.web-sys]
 features = ["HtmlInputElement", "InputEvent"]
