--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ thiserror = "2.0"
 kurrentdb = "1.0.0-alpha.4"
 uuid = { version = "1.1", features = ["v4", "serde"] }
 dotenvy = "0.15"
+garde = { version = "0.22.0", features = ["derive"] }
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
