--- a/client/civilisation/Cargo.toml
+++ b/client/civilisation/Cargo.toml
@@ -21,6 +21,7 @@ weblog = "0.3"
 wasm-bindgen = "0.2"
 serde.workspace = true
 serde_json.workspace = true
+garde.workspace = true
 futures = "0.3.28"
 rand = "0.9.2"
 url = "2.5.4"
