--- a/shared/civilisation/Cargo.toml
+++ b/shared/civilisation/Cargo.toml
@@ -10,6 +10,7 @@ horfimbor-eventsource = { workspace = true, optional = true }
 serde.workspace = true
 thiserror.workspace = true
 public-mono = {path = "../../public"}
+garde.workspace = true
 
 [features]
 server = ["horfimbor-eventsource", "public-mono/server"]
