move folder arround and move horfimbor-client to horfimbor-engine

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,27 @@
 [workspace]
 resolver = "2"
 members = [
-    "client/*",
     "public",
-    "server/*",
-    "shared/*",
-    "state/*"
+    "civilisation/*",
+    "planet/*",
 ]
 
 [workspace.dependencies]
 #horfimbor-eventsource = {path = "../horfimbor-engine/horfimbor-eventsource"}
 #horfimbor-jwt = { path = "../horfimbor-engine/horfimbor-jwt" }
+#horfimbor-client-derive = { path = "../horfimbor-engine/horfimbor-client-derive" }
+#horfimbor-client = { path = "../horfimbor-engine/horfimbor-client" }
+#public-account-event  = { path = "../hfb-auth/public-account-event", features = ["server"] }
+
 horfimbor-eventsource = "0.3.5"
 horfimbor-jwt = "0.1.2"
-public-account-event = {git = "https://github.com/horfimbor/hfb-auth", features = ["server"], branch = "fixes-monorepo"}
+horfimbor-client-derive = "0.1"
+horfimbor-client = {git = "https://github.com/horfimbor/horfimbor-engine", branch = "add-client" }
+public-account-event = { git = "https://github.com/horfimbor/hfb-auth", features = ["server"], branch = "fixes-monorepo" }
+
 anyhow = "1.0"
 clap = { version = "4.4", features = ["derive"] }
-redis= { version = "0.32.0", features = ["tokio-rustls-comp"] }
+redis = { version = "0.32.0", features = ["tokio-rustls-comp"] }
 rocket = { version = "0.5", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
