--- a/civilisation/client/Cargo.toml
+++ b/civilisation/client/Cargo.toml
@@ -7,14 +7,13 @@ edition = "2024"
 crate-type = ["rlib", "cdylib"]
 
 [dependencies]
-horfimbor-client-derive = "0.1"
-#horfimbor-client-derive = { path = "../../horfimbor-engine/horfimbor-client-derive" }
-horfimbor-client= {path = "../horfimbor-client"}
+horfimbor-client-derive.workspace = true
+horfimbor-client.workspace = true
 
 bounce = "0.9"
 yew = { version= "0.21", features=["csr"] }
 custom-elements = "0.2"
-civilisation-shared = { path = "../../shared/civilisation" }
+civilisation-shared = { path = "../shared" }
 gloo-net = "0.6"
 reqwasm = "0.5"
 weblog = "0.3"
