--- a/civilisation/state/Cargo.toml
+++ b/civilisation/state/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2024"
 [dependencies]
 horfimbor-eventsource.workspace = true
 serde.workspace = true
-civilisation-shared = { path = "../../shared/civilisation", features = ["server"] }
+civilisation-shared = { path = "../shared", features = ["server"] }
 public-mono = {path = "../../public", features = ["server"]}
 garde.workspace = true
 
