--- a/planet/server/Cargo.toml
+++ b/planet/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mono-civilisation-server"
+name = "mono-planet-server"
 version = "0.1.0"
 edition = "2024"
 
@@ -14,8 +14,8 @@ serde.workspace = true
 kurrentdb.workspace = true
 uuid.workspace = true
 thiserror.workspace = true
-civilisation-shared = { path = "../../shared/civilisation", features = ["server"] }
-civilisation-state = { path = "../../state/civilisation" }
+planet-shared = { path = "../shared", features = ["server"] }
+planet-state = { path = "../state" }
 public-mono = {path = "../../public" }
 redis= {  workspace = true }
 reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "charset", "http2"], default-features = false }
