--- a/planet/server/Cargo.toml
+++ b/planet/server/Cargo.toml
@@ -16,10 +16,12 @@ uuid.workspace = true
 thiserror.workspace = true
 planet-shared = { path = "../shared", features = ["server"] }
 planet-state = { path = "../state" }
-public-mono = {path = "../../public" }
-redis= {  workspace = true }
+planet-admin = { path = "../admin" }
+public-mono = { path = "../../public" }
+redis = { workspace = true }
+url = { workspace = true }
 reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "charset", "http2"], default-features = false }
-rocket = { workspace=true, features = ["json"] }
+rocket = { workspace = true, features = ["json"] }
 rocket_cors = "0.6"
 serde_json.workspace = true
 anyhow.workspace = true
@@ -30,14 +32,13 @@ signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
 signal-hook = "0.3"
 futures = "0.3"
 
-
-
 [dependencies.rocket_dyn_templates]
 version = "0.2"
 features = ["tera"]
 
 [build-dependencies]
-built = "0.7"
+built = "0.8.0"
 
 [lints]
 workspace = true
+
