remove useless civilisation dto

--- a/civilisation/server/Cargo.toml
+++ b/civilisation/server/Cargo.toml
@@ -16,6 +16,7 @@ uuid.workspace = true
 thiserror.workspace = true
 civilisation-shared = { path = "../shared", features = ["server"] }
 civilisation-state = { path = "../state" }
+civilisation-admin = { path = "../admin", features = ["server"] }
 public-mono = {path = "../../public" }
 redis= {  workspace = true }
 reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "charset", "http2"], default-features = false }
