--- a/planet/server/Cargo.toml
+++ b/planet/server/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2024"
 [dependencies]
 horfimbor-eventsource.workspace = true
 horfimbor-jwt.workspace = true
+horfimbor-time.workspace = true
 public-account-event.workspace = true
 clap.workspace = true
 serde.workspace = true
