move to kurrentdb

--- a/.env.dist
+++ b/.env.dist
@@ -9,7 +9,7 @@ APP_ID="copy from newly created app in hfb-auth"
 APP_KEY="copy from newly created app in hfb-auth"
 JWT_SECRET_KEY="copy from hfb-auth JWT_SECRET_KEY"
 
-EVENTSTORE_URI=esdb://admin:changeit@localhost:2113?tls=false&tlsVerifyCert=false
+EVENTSTORE_URI=kurrentdb://admin:changeit@localhost:2113?tls=false&tlsVerifyCert=false
 REDIS_URI=redis://localhost:6379/
 
 WASM_TAG=v0-1-0
