--- a/planet/server/Cargo.toml
+++ b/planet/server/Cargo.toml
@@ -21,7 +21,7 @@ planet-admin = { path = "../admin" }
 public-mono = { path = "../../public" }
 redis = { workspace = true }
 url = { workspace = true }
-reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "charset", "http2"], default-features = false }
+reqwest = { version = "0.13", features = ["rustls", "charset", "http2"], default-features = false }
 rocket = { workspace = true, features = ["json"] }
 rocket_cors = "0.6"
 serde_json.workspace = true
@@ -29,8 +29,8 @@ anyhow.workspace = true
 chrono = "0.4"
 dotenvy.workspace = true
 tokio = "1.43"
-signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
-signal-hook = "0.3"
+signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
+signal-hook = "0.4"
 futures = "0.3"
 
 [dependencies.rocket_dyn_templates]
@@ -38,7 +38,7 @@ version = "0.2"
 features = ["tera"]
 
 [build-dependencies]
-built = "0.8.0"
+built = "0.8"
 
 [lints]
 workspace = true
